# inferflow

./: .clang-tidy  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .yamllint  README.md  VERSION  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: auto-tag.yml  docs.yml  publish.yml  rebuild-deb.yml  test.yml
csrc/: bbox_ops.cpp  bindings.cpp  nms.cpp
csrc/batch/: batcher.cpp  bindings.cpp
csrc/ops/: bbox_ops.cpp
docs/: index.md  license.md
docs/assets/stylesheets/: extra.css
docs/reference/: types.md
docs/reference/asyncio/: index.md
docs/reference/asyncio/batch/: dynamic.md  index.md
docs/reference/asyncio/pipeline/: index.md
docs/reference/asyncio/pipeline/classification/: index.md  onnx.md  torch.md
docs/reference/asyncio/pipeline/detection/: index.md  onnx.md  torch.md
docs/reference/asyncio/pipeline/segmentation/: index.md  onnx.md  torch.md
docs/reference/asyncio/runtime/: index.md  onnx.md  tensorrt.md  torch.md
docs/reference/asyncio/workflow/: decorators.md  index.md  tasks.md
docs/reference/batch/: dynamic.md  index.md
docs/reference/pipeline/: classification.md  detection.md  index.md  segmentation.md
docs/reference/pipeline/classification/: index.md  onnx.md  torch.md
docs/reference/pipeline/detection/: index.md  onnx.md  torch.md
docs/reference/pipeline/segmentation/: index.md  onnx.md  torch.md
docs/reference/runtime/: index.md  onnx.md  tensorrt.md  torch.md
docs/reference/utils/: image.md  index.md  yolo.md
docs/reference/workflow/: decorators.md  index.md  tasks.md
examples/: README.md
examples/01_classification/: README.md  classify.py
examples/02_detection/: README.md  detect.py  requirements.txt
examples/03_segmentation/: README.md  requirements.txt  segment.py
examples/04_batch_processing/: README.md  batch_demo.py
examples/05_custom_workflow/: README.md  requirements.txt  workflow_demo.py
include/inferflow/: bbox_ops.hpp  nms.hpp
include/inferflow/batch/: batcher.hpp  queue.hpp
include/inferflow/ops/: bbox_ops.hpp
inferflow/: __init__.py  types.py
inferflow/_C/: batch.pyi
inferflow/asyncio/: __init__.py
inferflow/asyncio/pipeline/: __init__.py  classification.py  detection.py  segmentation.py
inferflow/asyncio/pipeline/detection/: torch.py
inferflow/asyncio/pipeline/segmentation/: onnx.py  torch.py
inferflow/asyncio/runtime/: __init__.py  onnx.py  tensorrt.py  torch.py
inferflow/asyncio/workflow/: __init__.py  decorators.py  tasks.py
inferflow/batch/: __init__.py  cpp.py  dynamic.py
inferflow/pipeline/: __init__.py  classification.py  detection.py  segmentation.py
inferflow/pipeline/detection/: onnx.py
inferflow/pipeline/segmentation/: onnx.py
inferflow/runtime/: __init__.py  onnx.py  tensorrt.py  torch.py
inferflow/utils/: image.py  yolo.py
inferflow/workflow/: __init__.py  decorators.py  tasks.py
scripts/: build.bat  bump.py  bump.sh
scripts/filegen/: docs.py
scripts/tools/: ansi.py  common.py
tests/: conftest.py
tests/benchmark/: test_async_vs_sync.py  test_batch.py  test_bbox.py  test_nms.py
tests/lib/: test_recorder.py
tests/unit/: test_batch.py  test_classification.py
