[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "inferflow"
version = "0.1.0-a"
description = ""
readme = "README.md"
authors = [
  { name = "BoChenSHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy>=1.23,<1.27",
  "opencv-python>=4.5.5,<5",
  "pillow>=10,<13",
  "torch>=2.1,<3",
  "torchvision>=0.24.1,<0.25",
]

optional-dependencies.dev = [ "pre-commit>=4.5,<5", "ruff>=0.14.7,<0.15" ]
optional-dependencies.docs = [
  "mkdoc>=0.1,<0.2",
  "mkdocs-material>=9.7,<10",
  "mkdocs-minify-plugin>=0.8,<0.9",
  "mkdocstrings[python]>=1,<2",
  "pymdown-extensions>=10.17.2,<11",
]
optional-dependencies.test = [ "mypy>=1.19,<2", "pylint>=4.0.4,<5", "pytest>=9.0.1,<10", "pytest-cov>=7,<8" ]
